# Bachelor-Thesis

./: Cargo.toml
.github/workflows/: ci.yml
src/: client.rs  error.rs  lib.rs  parameter.rs  request.rs  response.rs
