[package]
name = "http_helper"
version = "0.1.0"
edition = "2021"

[lib]
name = "http_helper"
path = "./src/lib.rs"

[dependencies]
serde ={ version = "1.0.217", features = ["derive"]}
multipart = {package = "multipart_ng", version = "0.18.0", default-features= false, features = ["server"]}
mime = "0.3.17"
url = "2.5.4"
bytes = "1.9.0"
urlencoding = "2.1.3"
# parsing of urlencoded form
form_urlencoded = "1.2.1"
thiserror = "2"
curl = "0.4"
http = "1"